--- a/inscripciones/src/contentApp/groupsLists/components/groupCard.css
+++ b/inscripciones/src/contentApp/groupsLists/components/groupCard.css
@@ -1,10 +1,26 @@
 .card {
-    width: 70%;
-    border: solid 2px blue;
-    border-radius: 10px;
-    text-align: center
+    margin: 15px;
+    padding: 15px;
+    width: 60vw;
+    border: solid 2px darkcyan;
+    border-radius: 30px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    height: 35vh;
+}
+
+.card-image {
+    margin: 10px;
+    width: 40%;
+    height: calc(100% - 20px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .card-Content {
-    height: 90%;
+    margin: 10px;
+    width: 60%;
+    height: calc(100% - 20px);
 }
