--- a/inscripciones/src/header/header.css
+++ b/inscripciones/src/header/header.css
@@ -1,9 +1,9 @@
 .App-header {
-  background-color: #0000ff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 5px;
+  background-color: #4343d6;
+  height: 80px;
   color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 } 
