--- a/inscripciones/src/contentApp/groupsLists/components/groupCard.css
+++ b/inscripciones/src/contentApp/groupsLists/components/groupCard.css
@@ -1,13 +1,12 @@
 .card {
     margin: 15px;
     padding: 15px;
-    width: 60vw;
-    height: 30vh; 
-    border: solid 2px darkcyan;
+    width: 60%;
+    height: 200px; 
     border-radius: 15px;
-
     display: flex;
     align-items: center;
+    box-shadow: 0 2px 6px 0 rgba(0,0,0,.3)
 }
 
 .card-image {
