--- a/inscripciones/src/header/header.css
+++ b/inscripciones/src/header/header.css
@@ -1,12 +1,12 @@
 .App-header {
   padding: 5px;
-  background-color: rgba(60, 60, 255);
-  height: 80px;
+  background-color: rgb(80, 80, 255);
+  height: 60px;
   color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   box-shadow: 0 2px 6px 0 rgb(0, 0, 255, 0.5)
 } 
 
