--- a/inscripciones/src/contentApp/contentApp.css
+++ b/inscripciones/src/contentApp/contentApp.css
@@ -6,3 +6,12 @@
   justify-content: space-evenly;
   align-items: center 
 }
+
+.Flex-box-row{
+  height: 100%;
+  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: center
+}
